@@ -6,7 +6,7 @@ AC_CONFIG_MACRO_DIR(m4)
 # user-visible library versioning
 IM_MAJOR_VERSION=7
 IM_MINOR_VERSION=21
-IM_MICRO_VERSION=2
+IM_MICRO_VERSION=3
 IM_VERSION=$IM_MAJOR_VERSION.$IM_MINOR_VERSION.$IM_MICRO_VERSION
 IM_VERSION_STRING=$IM_VERSION-`date`
 
